Alignment issue Fix

--- a/assets/css/Softwaredevelopment.css
+++ b/assets/css/Softwaredevelopment.css
@@ -41,7 +41,7 @@ a {
 }
 
 h4 {
-    text-align: center;
+    /* text-align: center; */
     margin: 50px 0;
     color: #444
 }
